# gargoyle

./: .gargoyle_config  .gargoyle_internal_port_config  .gargoyle_ssh_bruteforce_config  .gitignore  .travis.yml  AUTHORS  CONTRIBUTORS  LICENSE  Makefile.am  README.md  autogen.sh  build.sh  configure.ac  defaults.mk  etc-init.d-gargoyle  gargoyle_admin_wrapper.py  gargoyle_config.cpp  gargoyle_regex_tester.cpp  ip_addr_controller.cpp  ip_addr_controller.h  main_daemon.cpp  main_daemon_pcap.cpp  main_iptables_analysis.cpp  main_iptables_bruteforce.cpp  main_iptables_bruteforce_detect.c  main_iptables_monitor.cpp  main_iptables_remove.cpp  main_iptables_remove_from_blacklist.cpp  main_iptables_remove_from_whitelist.cpp  main_iptables_ssh_bruteforce.cpp  main_shared_config_test.cpp  main_shared_memory_data_base_to_sqlite.cpp  nf_queue.cpp  nf_queue.h  packet_handler.cpp  packet_handler.h  status.py  view_shared_mem.cpp
conf.d/: README  example.conf  tornado.conf
db/: gargoyle_attack_detect.db  port_scan_detect.db
lib/: LogTail.cpp  LogTail.h  Makefile  config_variables.h  data_base.cpp  data_base.h  gargoyle_config_vals.h  iptables_wrapper_api.c  iptables_wrapper_api.h  shared_config.cpp  shared_config.h  shared_mem.cpp  shared_mem.h  shared_memory_table.h  singleton.h  sqlite_wrapper_api.c  sqlite_wrapper_api.h  sshd_regexes  string_functions.h  system_functions.h  variables.h
pcap/: pcap_processing.cpp  pcap_processing.h
test/: shared_memory_data_base.cpp
utils/: alter_black_list_table.sql  gargoyle_admin_wrapper.py
yocto-layer/: README.md  bblayers.conf  local.conf
yocto-layer/meta-bayshorenetworks/: README
yocto-layer/meta-bayshorenetworks/conf/: layer.conf
yocto-layer/meta-bayshorenetworks/recipes-bayshorenetworks/gargoyle/: gargoyle_0.1.bb
yocto-layer/meta-bayshorenetworks/recipes-bayshorenetworks/gargoyle/files/: gargoyle_internal_port_config.conf
